collector/haproxy/k8s/templates/echoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --out k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: echoserver
  name: echoserver
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: echoserver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --out k8s
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/haproxy-integrations: "true"
        io.kompose.service: echoserver
    spec:
      containers:
        - args:
            - -text
            - hello world
          image: hashicorp/http-echo:latest
          name: echoserver
          resources: {}
      restartPolicy: Always
status: {}
