collector/haproxy/k8s/templates/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --out k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
    - name: "8404"
      port: 8404
      targetPort: 8404
  selector:
    io.kompose.service: haproxy
status:
  loadBalancer: {}
