collector/haproxy/k8s/templates/haproxy-integrations-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: haproxy-integrations
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/haproxy-integrations: "true"
  podSelector:
    matchLabels:
      io.kompose.network/haproxy-integrations: "true"
